--- a/src/Crivero/PruebaBundle/Resources/views/Default/sesion.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/sesion.html.twig
@@ -2,28 +2,42 @@
 
 {% block title %}Vista de {{sesion.nombre}} {% endblock %}
 {% block contenido %}
-    <div style="text-align: center">
-        <h2>{{sesion.nombre}} - Abdomen</h2>
+    <div class="text-center">
+        <h3>
+            {{sesion.nombre}} 
+            <small class="text-muted">Abdomen</small>
+        </h3>
     </div>
+    
+    <div id="sesiondat">
+        <div id="sesionfot" style="margin-top: 14px;">
+            <img src="{{ asset('images/abdd.jpg') }}" class="img-responsive center-block" />        
+        </div>
+  
     {% if sesion.estado == "Solicitud Presentada" %}
-        <div id="accionesesion" style="margin-left: 18px; margin-right: 18px;">
-            <button style="height: 25px;">Aceptar Solicitud</button>
-            <button style="float: right; height: 25px;">Rechazar Solicitud </button>
+        <div class="accionesesion text-center" style="margin-left: 18px; margin-right: 18px;">
+            <button style="height: 30px; width: 250px;" class="btn btn-success col-sm-3 col-sm-offset-3">Aceptar Solicitud</button>
+            <button style="height: 30px; width: 250px;" class="btn btn-danger col-sm-3 col-sm-offset-1">Rechazar Solicitud </button>
+        </div>
+    {% else %}
+        <div class="text-center">
+            <button style="height: 30px; width: 600px;" class="btn btn-success">Validada</button>
         </div>
     {% endif %}
-    <div id="sesiondat">
-        <div id="sesionfot" style="margin-left: 16em; margin-top: 20px;">
-            <img src="{{ asset('images/abdd.jpg') }}" style="width: 65%;" />        
-        </div>
-        <div id="colder" style="float: right; margin-right: 6em;">
-            <h4>Tiempo estimado:</h4> <p>40-45 minutos</p>
-            <h4>Descanso entre ejercicios:</h4> <p>2-3 minutos</p>
-            <h4>Objetivos:</h4> <p>Definir abdominales y tonificar el vientre </p>
-        </div>
-        <div id="colizq" style="margin-left: 7.5em;">
-            <h4>Monitor:</h4> <p>Jordan</p>
-            <h4>Ejercicios:</h4> <p>Plancha dinámica, Elevación de piernas y Patadas de rana</p>
-            <h4>Repeticiones:</h4> <p>3/Ejercicio</p>
-            <h4>Material:</h4> <p>Nuestro propio cuerpo para completar esta efectiva sesion para el abdomen</p>
+        
+           <div class="row">
+                    <div id="colizq" class="col-md-4 col-md-offset-3" >
+                        <h4>Monitor:</h4> <p>Jordan</p>
+                        <h4>Ejercicios:</h4> <p >Plancha dinámica, Elevación de piernas y Patadas de rana</p>
+                        <h4>Repeticiones:</h4> <p>3/Ejercicio</p>
+                        <h4>Material:</h4> <p>Nuestro propio cuerpo para completar esta efectiva sesion para el abdomen</p>
+                    </div>
+                    <div id="colder" class="col-md-4">
+                        <h4>Tiempo estimado:</h4> <p>40-45 minutos</p>
+                        <h4>Descanso entre ejercicios:</h4> <p>2-3 minutos</p>
+                        <h4>Objetivos:</h4> <p>Definir abdominales y tonificar el vientre </p>
+                    </div>
+           </div>
+    </div>
             
 {% endblock %}
