--- a/src/modulomonitores/monitoresBundle/Resources/views/main.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/main.html.twig
@@ -5,16 +5,7 @@
 {% endblock %}
 
 {% block header %}
-    <div class="logout">
-        <form action="{{url('modulomonitores_monitores_homeMonitores')}}">
-            <button>Log out</button>
-        </form>
-    </div>
-    <div class="perfil">
-        <form>
-            <button>Perfil</button>
-        </form>
-    </div>
+
 {% endblock %}
 
 {% block navegation %}
@@ -35,16 +26,13 @@
 
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{{url('crivero_prueba_clientes')}}">Clientes</a></li>
-                    <li><a href="{{url('crivero_prueba_monitores')}}">Monitores</a></li>
-                    <li><a href="{{url('crivero_prueba_canchas')}}">Canchas</a></li>
-                    <li><a href="{{url('crivero_prueba_torneos')}}">Torneos</a></li>
-                    <li><a href="{{url('crivero_prueba_sesiones')}}">Sesiones</a></li>
+                    <li><a href="{{url('modulomonitores_monitores_sesionesMonitores')}}">Sesiones</a></li>
+                    <li><a href="{{url('modulomonitores_monitores_sesionesDedicadas')}}">Sesiones dedicadas</a></li>
                 </ul>
 
                 <form class="navbar-form navbar-center" role="search">
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Nombre, cancha...">
+                        <input type="text" class="form-control" placeholder="Nombre, sesion...">
                     </div>
                     <button type="submit" class="btn btn-default">Buscar</button>
  
