--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/nuevaSesionDedicada.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/nuevaSesionDedicada.html.twig
@@ -54,7 +54,7 @@
                     <span class="text-danger">{{ form_errors(form.descanso) }}</span>
                 </div>
                 
-                <div class="form-group">
+                <div class="form-group" style="display:none;">
                     <p>Limite de clientes</p>
                     {{ form_widget(form.lClientes, { 'attr' : {'class' : 'form-control', 'placeholder' : 'Introduzca el limite de participantes'} }) }}
                     <span class="text-danger">{{ form_errors(form.lClientes) }}</span>
