Correcciones en las vistas

--- a/src/Crivero/PruebaBundle/Resources/views/Default/torneo.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/torneo.html.twig
@@ -12,7 +12,7 @@
             {% if torneo.estadoTorneo == "Validado" %}
                 <h3>Ver información de equipos</h3>
                 <p>{{torneo.equipos}}<p>
-                <a href="{{url('crivero_prueba_equipos')}}">Ver los datos de los equipos</a>
+                    <a href="{{url('crivero_prueba_equipos')}}">Ver los datos de los equipos</a><br>
             {% endif %} 
         {% endblock %}
     </div>
