--- a/src/Crivero/PruebaBundle/Resources/views/Default/torneos.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/torneos.html.twig
@@ -6,7 +6,7 @@
 
 <h1>Torneos</h1>
 {% for torneo in torneos %}
-    <a href="{{url('crivero_prueba_torneo', {'matricula': torneo.matricula})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> {{ torneo.matricula }} - {{ torneo.nombre }} - {{torneo.estado}}</a>
+    <a href="{{url('crivero_prueba_torneo', {'id': torneo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> {{ torneo.id }} - {{ torneo.nombre }} - {{torneo.estadoTorneo}}</a>
 {% endfor %}
 
 {% endblock %}
