Modificaciones en las vistas equipos

--- a/src/Crivero/PruebaBundle/Resources/views/Default/equipo.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/equipo.html.twig
@@ -5,7 +5,7 @@
     <div class="container text-center">
         <h2>Detalles del Equipo</h2>
         {% block detalles %}
-            {% if equipo.deporte == "Futbol" %}
+            {% if equipo.deporte == "Fútbol" %}
                 <h3>Ver información de los miembros</h3>
                 <p>{{equipo.miembros}}</p>
             {% endif %} 
