--- a/src/Crivero/PruebaBundle/Resources/views/Default/canchas.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/canchas.html.twig
@@ -12,8 +12,8 @@
                     <tr>
                         <th>{{ knp_pagination_sortable(pagination, 'Nombre', 'c.tipo') }}</th>
                         <th>{{ knp_pagination_sortable(pagination, 'Estado', 'c.disponibilidad') }}</th>
-                        <th>Horario</th>
-                        <th>Valoracion</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Horario', 'c.horario') }}</th>
+                        <th>{{ knp_pagination_sortable(pagination, 'Valoracion', 'c.valoracion') }}</th>
                         <th>Acciones</th>
                     </tr>
                 </thead>
@@ -21,16 +21,17 @@
                     {% for cancha in pagination %}
                         <tr>
                             <td>{{cancha.tipo}}</td>
-                            <td>{{cancha.disponibilidad}}</td>
+                            <td><strong>{{cancha.disponibilidad}}</strong></td>
                             <td>{{cancha.horario}}</td>
                             <td>{{cancha.valoracion}}/5.0</td>
                             <td class="actions">
                                 <a href="{{ path('crivero_prueba_cancha', { id: cancha.id }) }}" class="btn btn-sm btn-info">
                                     Ver
                                 </a>
-                                <a href="#" class="btn btn-sm btn-danger btn-delete">
-                                    Eliminar
+                                <a href="#" class="btn btn-sm btn-primary">
+                                    Editar
                                 </a>
+                                
                             </td>
                         </tr>
                     {% endfor %}
