--- a/src/Crivero/PruebaBundle/Resources/views/main.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/main.html.twig
@@ -29,7 +29,7 @@
                             </ul>
                      </li>
                     <li><a href="{{url('crivero_prueba_canchas')}}">Canchas</a></li>
-                    <li><a href="{{url('crivero_prueba_torneos')}}">Torneos</a></li>
+                    <li><a href="{{url('crivero_prueba_competiciones')}}">Competiciones</a></li>
                      <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">Sesiones <b class="caret"></b></a>
                             <ul class="dropdown-menu">
