--- a/src/moduloclientes/clienteBundle/Resources/views/main.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/main.html.twig
@@ -25,9 +25,9 @@
                     <li><a href="{{url('moduloclientes_cliente_canchasClientes')}}">Canchas</a></li>
                     
                     <li class="dropdown">
-                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Torneos <b class="caret"></b></a>
+                            <a href="" class="dropdown-toggle" data-toggle="dropdown">Competiciones <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                              <li><a href="{{url('moduloclientes_cliente_torneosClientes')}}"> Mis torneos </a></li>
+                              <li><a href="{{url('moduloclientes_cliente_competicionesClientes')}}"> Mis competiciones </a></li>
                             </ul>
                      </li>
                     <li><a href="{{url('moduloclientes_cliente_sesionesClientes')}}">Sesiones</a></li>
