--- a/src/Crivero/PruebaBundle/Resources/views/Default/jugadores.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Default/jugadores.html.twig
@@ -13,29 +13,33 @@
         <table class="table table-hover">
             <thead>
                 <tr>
+                    <th>Equipo</th>
                     <th>Nombre</th>
                     <th>1º Apellido</th>
                     <th>2º Apellido</th>
                     <th>Dorsal</th>
-                    <th>Incidencia</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
                 {% for jugador in jugadores %}
                     <tr>
+                        {% for equipo in equipos if equipo.id == jugador.idEquipo%}
+                            <td>{{equipo.nombre}}</td>
+                        {%endfor%}
                         <td>{{jugador.nombre}}</td>
                         <td>{{jugador.primerApellido}}</td>
                         <td>{{jugador.segundoApellido}}</td>
                         <td>{{jugador.dorsal}}</td>
                         <td class="actions">
-                            <a href="{{ path('crivero_prueba_jugador', { id: jugador.id }) }}" class="btn btn-sm btn-info">
-                                Ver
+                            <a href="{{ path('crivero_prueba_jugador', { id: jugador.id })  }}" class="btn btn-sm btn-info">
+                                Ver Detalles
                             </a>
-                            {#<a href="{{ path('crivero_prueba_editarJugador', { id: competicion.id }) }}" class="btn btn-sm btn-primary">
-                                Editar
+                            {#<a href="{{ path('crivero_prueba_editarJugador', { id: jugador.id }) }}" class="btn btn-sm btn-primary">
+                                Editar Jugador
                             </a>#}
                             <a href="#" class="btn btn-sm btn-danger btn-delete">
-                                Eliminar
+                                Eliminar Jugador
                             </a>
                         </td>
                     </tr>
