--- a/src/moduloclientes/clienteBundle/Resources/views/main.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/main.html.twig
@@ -28,6 +28,7 @@
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">Competiciones <b class="caret"></b></a>
                             <ul class="dropdown-menu">
                               <li><a href="{{url('moduloclientes_cliente_competicionesClientes')}}"> Mis competiciones </a></li>
+                              <li><a href="{{url('moduloclientes_cliente_equiposClientes')}}"> Mis equipos </a></li>
                             </ul>
                      </li>
                     <li><a href="{{url('moduloclientes_cliente_sesionesClientes')}}">Sesiones</a></li>
