--- a/src/Crivero/PruebaBundle/Resources/views/main.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/main.html.twig
@@ -29,6 +29,7 @@
                             </ul>
                      </li>
                     <li><a href="{{url('crivero_prueba_canchas')}}">Canchas</a></li>
+                    <li><a href="{{url('crivero_prueba_reservas')}}">Reservas</a></li>
                     <li class="dropdown">
                             <a href="" class="dropdown-toggle" data-toggle="dropdown">Competiciones <b class="caret"></b></a>
                             <ul class="dropdown-menu">
