--- a/src/Crivero/PruebaBundle/Resources/views/Sesiones/sesion.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Sesiones/sesion.html.twig
@@ -21,6 +21,14 @@
             <div class="text-center">
                 <a href="{{path('crivero_prueba_cancelarSesion', {id: sesion.id})}}" style="height: 30px; width: 600px;" class="btn btn-danger">Cancelar</a>
             </div>
+            <div class="row">
+                <div id="colizq" class="col-md-4 col-md-offset-3" >
+                    <h4>Aula:</h4> <p>{{aula.nombre}}</p>
+                </div>
+                <div id="colder" class="col-md-4">
+                    <h4>Horario:</h4> <p>{{sesion.horario}} </p>
+                </div>
+            </div>
         {% elseif sesion.estado == "cancelada" %}
             <div class="text-center">
                 <button style="height: 30px; width: 600px;" class="btn btn-danger" disabled="disabled">Cancelada</button>
