--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/miSesionDedicada.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/miSesionDedicada.html.twig
@@ -16,6 +16,14 @@
         {% if sesion.estado == "validada" %}
             <div class="accionesesion text-center">
                 <a href="{{path('modulomonitores_monitores_solEliminarSesionDedicada', {id: sesion.id})}}" style="height: 30px; width: 600px;" class="btn btn-danger">Solicitar eliminar sesion dedicada</a> 
+                <div class="row">
+                    <div id="colizq" class="col-md-4 col-md-offset-3" >
+                        <h4>Aula:</h4> <p>{{sesion.aula}}</p>
+                    </div>
+                    <div id="colder" class="col-md-4">
+                        <h4>Horario:</h4> <p>{{sesion.horario}} </p>
+                    </div>
+                </div>
             </div>
         {% elseif sesion.estado == "solEliminar" %}
             <div class="text-center">
