--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/miSesionMonitores.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/miSesionMonitores.html.twig
@@ -17,6 +17,14 @@
             <div class="accionesesion text-center">
                 <a href="{{path('modulomonitores_monitores_solEliminarSesion', {id: sesion.id})}}" style="height: 30px; width: 600px;" class="btn btn-danger">Solicitar eliminar sesion</a> 
             </div>
+            <div class="row">
+                <div id="colizq" class="col-md-4 col-md-offset-3" >
+                    <h4>Aula:</h4> <p>{{aula.nombre}}</p>
+                </div>
+                <div id="colder" class="col-md-4">
+                    <h4>Horario:</h4> <p>{{sesion.horario}} </p>
+                </div>
+            </div>
         {% elseif sesion.estado == "solEliminar" %}
             <div class="text-center">
                 <button style="height: 30px; width: 600px;" class="btn btn-danger" disabled="disabled">Solicitud de eliminacion enviada</button>
@@ -31,7 +39,7 @@
             <div class="text-center">
                 <a href="{{path('modulomonitores_monitores_editarSesion', {id: sesion.id})}}" style="height: 30px; width: 250px;" class="btn btn-primary">Modificar sesion</a> 
                 {{ include('modulomonitoresmonitoresBundle:Default:forms/form.html.twig', { form: delete_form })}}
-                
+
                 <h4>Motivos:</h4> <p>{{sesion.observaciones}}</p>
             </div>
         {% else %}
