--- a/src/Crivero/PruebaBundle/Resources/views/Usuarios/monitor.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Usuarios/monitor.html.twig
@@ -19,7 +19,7 @@
                     <ul id="sesiones">
                         {% for sesion in sesiones %}
                             <li>
-                                <p>Aula {{sesion.aula}} - {{sesion.nombre}}</p>
+                                <p>Aula {{sesion.aula}} - {{sesion.nombre}} - {{sesion.horario}}</p>
                             </li>
                         {% endfor %}
                     </ul>
