--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/competiciones.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/competiciones.html.twig
@@ -42,8 +42,10 @@
                 </tbody>
             </table>
         </div>
-       {# <div class="nuevaCompeticion">
-            <a href="{{path('crivero_prueba_nuevaCompeticion')}}" class="btn btn-success" style="height: 30px; width: 150px;">Nueva Competicion <span class="glyphicon glyphicon-plus"></span></a>
-        </div>#}
+        <div class="nuevaCompeticion">
+            <a href="{{path('crivero_prueba_competicion_nueva')}}" class="btn btn-success" style="height: 30px; width: 150px;">
+                Nueva Competicion 
+             <span class="glyphicon glyphicon-plus"></span></a>
+        </div>
     </div>
 {% endblock %}
