--- a/src/Crivero/PruebaBundle/Resources/views/Aulas/editarAula.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Aulas/editarAula.html.twig
@@ -28,9 +28,9 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                 <div class="form-group">
-                                    {{ form_label(form.disponibilidad) }}
-                                    {{ form_widget(form.disponibilidad, {'attr': {'class': 'form-control'}}) }}
-                                    <span class="text-danger">{{ form_errors(form.disponibilidad) }}</span>
+                                    {{ form_label(form.imagen) }}
+                                    {{ form_widget(form.imagen, {'attr': {'class': 'form-control'}}) }}
+                                    <span class="text-danger">{{ form_errors(form.imagen) }}</span>
                                 </div>
                             </div>
                         </div>
