--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipos.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/equipos.html.twig
@@ -12,13 +12,25 @@
     <h3>Fútbol</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Fútbol'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Clasificación: {{equipo.clasificacion}}º-Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
     <h3>Baloncesto</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Baloncesto'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Clasificación: {{equipo.clasificacion}}º-Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+        {%endif%}
+    {% endfor %}
+    <h3>Tenis</h3>
+    {% for equipo in equipos %}
+        {%if equipo.deporte =='Tenis'%}
+            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+        {%endif%}
+    {% endfor %}
+    <h3>Padel</h3>
+    {% for equipo in equipos %}
+        {%if equipo.deporte =='Padel'%}
+            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
 {% endblock %}
