se pueden añadir jugadores faltan algunos detalles como el idEquipo e identificar el creador del equipo

--- a/src/moduloclientes/clienteBundle/Resources/views/Default/nuevoEquipoCliente.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Default/nuevoEquipoCliente.html.twig
@@ -1,6 +1,6 @@
 {% extends 'moduloclientesclienteBundle::main.html.twig' %}
 
-{% block title %} Nueva Equipo {% endblock %}
+{% block title %} Nuevo Equipo {% endblock %}
 
 {% block contenido %}
     <div class="container">
