--- a/src/moduloclientes/clienteBundle/Resources/views/Default/equiposClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Default/equiposClientes.html.twig
@@ -16,25 +16,25 @@
     <h3>Fútbol</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Fútbol'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
     <h3>Baloncesto</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Baloncesto'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
     <h3>Tenis</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Tenis'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
     <h3>Padel</h3>
     {% for equipo in equipos %}
         {%if equipo.deporte =='Padel'%}
-            <a href="{{url('crivero_prueba_equipo', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
         {%endif%}
     {% endfor %}
 {% endblock %}
