--- a/src/Crivero/PruebaBundle/Resources/views/Competiciones/jugadores.html.twig
+++ b/src/Crivero/PruebaBundle/Resources/views/Competiciones/jugadores.html.twig
@@ -3,48 +3,51 @@
 {% block title %} Vista de Jugadores {% endblock %}
 
 {% block contenido %}
-<div id="buscador">
-    <form>
-        <input type="search" name="equipo" placeholder="Buscar jugador"/>
-    </form>
-</div>
-<h1>Listado de Jugadores</h1>
-    <div class="table-responsive">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>Equipo</th>
-                    <th>Nombre</th>
-                    <th>1º Apellido</th>
-                    <th>2º Apellido</th>
-                    <th>Dorsal</th>
-                    <th>Acciones</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for jugador in jugadores %}
+    <div class="container">
+
+        <div id="buscador">
+            <form>
+                <input type="search" name="equipo" placeholder="Buscar jugador"/>
+            </form>
+        </div>
+        <h1>Listado de Jugadores</h1>
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
                     <tr>
-                        {% for equipo in equipos if equipo.id == jugador.idEquipo%}
-                            <td>{{equipo.nombre}}</td>
-                        {%endfor%}
-                        <td>{{jugador.nombre}}</td>
-                        <td>{{jugador.primerApellido}}</td>
-                        <td>{{jugador.segundoApellido}}</td>
-                        <td>{{jugador.dorsal}}</td>
-                        <td class="actions">
-                            <a href="{{ path('crivero_prueba_jugador', { id: jugador.id })  }}" class="btn btn-sm btn-info">
-                                Ver Detalles
-                            </a>
-                            {#<a href="{{ path('crivero_prueba_editarJugador', { id: jugador.id }) }}" class="btn btn-sm btn-primary">
-                                Editar Jugador
-                            </a>#}
-                            <a href="#" class="btn btn-sm btn-danger btn-delete">
-                                Eliminar Jugador
-                            </a>
-                        </td>
+                        <th>Equipo</th>
+                        <th>Nombre</th>
+                        <th>1º Apellido</th>
+                        <th>2º Apellido</th>
+                        <th>Dorsal</th>
+                        <th>Acciones</th>
                     </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                    {% for jugador in jugadores %}
+                        <tr>
+                            {% for equipo in equipos if equipo.id == jugador.idEquipo%}
+                                <td>{{equipo.nombre}}</td>
+                            {%endfor%}
+                            <td>{{jugador.nombre}}</td>
+                            <td>{{jugador.primerApellido}}</td>
+                            <td>{{jugador.segundoApellido}}</td>
+                            <td>{{jugador.dorsal}}</td>
+                            <td class="actions">
+                                <a href="{{ path('crivero_prueba_jugador', { id: jugador.id })  }}" class="btn btn-sm btn-info">
+                                    Ver Detalles
+                                </a>
+                                {#<a href="{{ path('crivero_prueba_editarJugador', { id: jugador.id }) }}" class="btn btn-sm btn-primary">
+                                    Editar Jugador
+                                </a>#}
+                                <a href="#" class="btn btn-sm btn-danger btn-delete">
+                                    Eliminar Jugador
+                                </a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 {% endblock %}
