--- a/src/moduloclientes/clienteBundle/Resources/views/Default/equiposClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Default/equiposClientes.html.twig
@@ -2,34 +2,36 @@
 
 {% block title %} Vista de Equipos {% endblock %}
 {% block contenido %}
-<div id="buscador">
-    <form>
-        <input type="search" name="equipo" placeholder="Buscar equipo"/>
-    </form>
-</div>
-<h1>Listado de Equipos</h1>
-    <h3>Fútbol</h3>
-    {% for equipo in equipos %}
-        {%if equipo.deporte =='Fútbol'%}
-            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
-        {%endif%}
-    {% endfor %}
-    <h3>Baloncesto</h3>
-    {% for equipo in equipos %}
-        {%if equipo.deporte =='Baloncesto'%}
-            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
-        {%endif%}
-    {% endfor %}
-    <h3>Tenis</h3>
-    {% for equipo in equipos %}
-        {%if equipo.deporte =='Tenis'%}
-            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
-        {%endif%}
-    {% endfor %}
-    <h3>Padel</h3>
-    {% for equipo in equipos %}
-        {%if equipo.deporte =='Padel'%}
-            <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
-        {%endif%}
-    {% endfor %}
+    <div class="container">
+        <div id="buscador">
+            <form>
+                <input type="search" name="equipo" placeholder="Buscar equipo"/>
+            </form>
+        </div>
+        <h1>Listado de Equipos</h1>
+        <h3>Fútbol</h3>
+        {% for equipo in equipos %}
+            {%if equipo.deporte =='Fútbol'%}
+                <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            {%endif%}
+        {% endfor %}
+        <h3>Baloncesto</h3>
+        {% for equipo in equipos %}
+            {%if equipo.deporte =='Baloncesto'%}
+                <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            {%endif%}
+        {% endfor %}
+        <h3>Tenis</h3>
+        {% for equipo in equipos %}
+            {%if equipo.deporte =='Tenis'%}
+                <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            {%endif%}
+        {% endfor %}
+        <h3>Padel</h3>
+        {% for equipo in equipos %}
+            {%if equipo.deporte =='Padel'%}
+                <a href="{{url('moduloclientes_cliente_equipoClientes', {'id': equipo.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}">Nombre del equipo:{{ equipo.nombre }}</a>
+            {%endif%}
+        {% endfor %}
+    </div>
 {% endblock %}
