--- a/src/moduloclientes/clienteBundle/Resources/views/Default/sesionesClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Default/sesionesClientes.html.twig
@@ -10,8 +10,10 @@
                 <h3>Listado de entrenamiento</h3>
             </div>
             {% for sesion in sesiones %}
-                {% if sesion.estadoCliente != 'Invalida' %}
-                    <a href="{{url('moduloclientes_cliente_sesionClientes', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estadoCliente}} </a>
+                {% if (sesion != NULL) %}
+                    {% if sesion.estadoCliente != 'Invalida' %}
+                        <a href="{{url('moduloclientes_cliente_sesionClientes', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estadoCliente}} </a>
+                    {% endif %}
                 {% endif %}
             {% endfor %}
         </div>
