--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/misSesionesMonitores.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/misSesionesMonitores.html.twig
@@ -3,15 +3,15 @@
 
 {% block title %} Vista de Sesiones {% endblock %}
 {% block contenido %}
-    <h1>Listado de Sesiones</h1>
-    {% for sesion in sesiones %}
-        {% if sesion.cliente=="normal" %}
-        <a href="{{url('modulomonitores_monitores_miSesionMonitores', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estado }}</a>
-        {% endif %}
+    <div class="container">
+        <h1>Listado de Sesiones</h1>
+        {% for sesion in sesiones %}
+            {% if sesion.cliente=="normal" %}
+                <a href="{{url('modulomonitores_monitores_miSesionMonitores', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estado }}</a>
+            {% endif %}
         {% endfor %}
-    <div class="accionesesion text-center" style="margin-top:5px; margin-left: 5px">
-        <a href="{{path('modulomonitores_monitores_nuevaSesion')}}" class="btn btn-success col-sm-1" style="height: 30px; width: 150px;">Nuevo sesion <span class="glyphicon glyphicon-plus"></span></a>
+        <div class="accionesesion text-center" style="margin-top:5px; margin-left: 5px">
+            <a href="{{path('modulomonitores_monitores_nuevaSesion')}}" class="btn btn-success col-sm-1" style="height: 30px; width: 150px;">Nuevo sesion <span class="glyphicon glyphicon-plus"></span></a>
+        </div>
     </div>
-    
-        
 {% endblock %}
