--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/sesionesDedicadas.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/sesionesDedicadas.html.twig
@@ -3,11 +3,12 @@
 
 {% block title %} Vista de sesiones dedicadas {% endblock %}            
 {% block contenido %}
-
-    <h1>Listado de sesiones de dedicadas</h1>
-    {% for sesion in sesiones %}
-        {% if sesion.cliente!="normal" %}
-        <a href="{{url('modulomonitores_monitores_sesionDedicada', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{ sesion.id }}: {{ sesion.cliente }}/{{ sesion.nombre }} - {{ sesion.estado}} </a>
-    {% endif %}
-    {% endfor %}
+    <div class="container">
+        <h1>Listado de sesiones de dedicadas</h1>
+        {% for sesion in sesiones %}
+            {% if sesion.cliente!="normal" %}
+                <a href="{{url('modulomonitores_monitores_sesionDedicada', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{ sesion.id }}: {{ sesion.cliente }}/{{ sesion.nombre }} - {{ sesion.estado}} </a>
+            {% endif %}
+        {% endfor %}
+    </div>
 {% endblock %}
