--- a/src/modulomonitores/monitoresBundle/Resources/views/Default/sesionesMonitores.html.twig
+++ b/src/modulomonitores/monitoresBundle/Resources/views/Default/sesionesMonitores.html.twig
@@ -3,12 +3,12 @@
 
 {% block title %} Vista de Sesiones {% endblock %}
 {% block contenido %}
-    <h1>Listado de Sesiones</h1>
-    {% for sesion in sesiones %}
-        {% if sesion.cliente=="normal" %}
-        <a href="{{url('modulomonitores_monitores_sesionMonitores', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estado }}</a>
-        {% endif %}
+    <div class="container">
+        <h1>Listado de Sesiones</h1>
+        {% for sesion in sesiones %}
+            {% if sesion.cliente=="normal" %}
+                <a href="{{url('modulomonitores_monitores_sesionMonitores', {'id': sesion.id})}}" class="fila {{cycle(["par","impar"], loop.index)}}"> Sesion {{sesion.id}}: {{ sesion.nombre }} - {{ sesion.estado }}</a>
+            {% endif %}
         {% endfor %}
-    
-        
+    </div>
 {% endblock %}
