El cliente puede solicitar una fecha para cuando crea una competición tal y como figura en la propuesta de tfg

--- a/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevaCompeticionClientes.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevaCompeticionClientes.html.twig
@@ -24,8 +24,7 @@
             {{ form_widget(form.tipocompeticion, { 'attr' : {'class' : 'form-control'} }) }}
             <span class="text-danger">{{ form_errors(form.tipocompeticion) }}</span>
         </div>
-        
-        <div class="hidden">
+        <div class="form-group">
             <label>Fecha Inicio:</label><br>
             {{ form_widget(form.fechainicio, { 'attr' : {'class' : ''} }) }}
             <span class="text-danger">{{ form_errors(form.fechainicio) }}</span>
