--- a/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevoEquipoCliente.html.twig
+++ b/src/moduloclientes/clienteBundle/Resources/views/Competiciones/nuevoEquipoCliente.html.twig
@@ -17,12 +17,17 @@
             {{ form_widget(form.nombre, {'attr' : {'class' : 'form-control'}  } ) }}
             <span class="text-danger">{{ form_errors(form.nombre) }}</span>
         </div>
-        
+
         <div class="form-group">
             {{ form_label(form.deporte) }}
             {{ form_widget(form.deporte, { 'attr' : {'class' : 'form-control'} }) }}
             <span class="text-danger">{{ form_errors(form.deporte) }}</span>
         </div>
+
+        {#<div class="form-group">#}
+            {#{{ form_widget(form.deporte, {'value' : deporte } ) }}#}
+            {#<span class="text-danger">{{ form_errors(form.deporte) }}</span>#}
+        {#</div>#}
         <p>
             {{ form_widget(form.confirmar, {'label' : 'Confirmar', 'attr': {'class': 'btn btn-success'}}) }}
         </p>                
